# vanGrondwelle

./: README.md  pyproject.toml
changes/: 2026-03-10-contact-scraper-foundation.md  2026-03-10-csv-export-den-haag-seeds.md  2026-03-27-bunnik-geography-contract.md
output/: den-haag-zorgbedrijven.csv
src/vangrondwelle/: __init__.py  business_sources.py  cli.py  crawler.py  discovery.py  extractor.py  logging_utils.py  models.py  normalize.py  output.py  service.py
tests/: test_batch_service.py  test_bunnik_rollout.py  test_crawler.py  test_discovery.py  test_extractor.py  test_output.py  test_scrape_schemes.py  test_service.py
tests/fixtures/: contact_page.html  home_page.html  zorgkaart_detail_den_haag.html  zorgkaart_listing_den_haag.html
